<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.snowplowanalytics.snowplowtrackerdemo.ClassicDemo">

    <TextView
        android:id="@+id/header"
        android:text="@string/lite_demo_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/lite_demo_info"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout android:id="@+id/emitter_uri_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView android:id="@+id/emitter_uri_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emitter_uri_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/emitter_uri_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="textNoSuggestions"
            android:hint="@string/emitter_uri_hint"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="23" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emitter_protocol_text"
        android:id="@+id/protocol_text"
        android:layout_above="@+id/radio_send_security"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emitter_type_text"
        android:id="@+id/type_text"
        android:layout_alignTop="@+id/protocol_text"
        android:layout_alignLeft="@+id/radio_send_type"
        android:layout_alignStart="@+id/radio_send_type"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <RadioGroup
        android:id="@+id/radio_send_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radio_send_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/radio_http"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_http" />

        <RadioButton
            android:id="@+id/radio_https"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_https" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_send_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emitter_uri_block"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="31dp">

        <RadioButton
            android:id="@+id/radio_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_get" />

        <RadioButton
            android:id="@+id/radio_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_post" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_lite_start"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/radio_send_security"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emitter_logging_text"
        android:id="@+id/logger_header"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_below="@+id/btn_lite_start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_output"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logger_header"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:maxLines = "200"
        android:scrollbars = "vertical"
        android:textColor="@android:color/white"
        android:background="@color/button_material_dark"
        android:gravity="bottom"
        android:layout_toStartOf="@+id/radio_send_type"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:layout_toLeftOf="@+id/radio_send_type" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emitter_statistics"
        android:id="@+id/statistics"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_below="@+id/btn_lite_start"
        android:layout_toRightOf="@+id/log_output"
        android:layout_toEndOf="@+id/log_output" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_events"
        android:id="@+id/created_events"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/log_output"
        android:layout_toRightOf="@+id/log_output"
        android:layout_toEndOf="@+id/log_output" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_events"
        android:id="@+id/sent_events"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/created_events"
        android:layout_toRightOf="@+id/log_output"
        android:layout_toEndOf="@+id/log_output" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_status"
        android:id="@+id/online_status"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/sent_events"
        android:layout_toRightOf="@+id/log_output"
        android:layout_toEndOf="@+id/log_output" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emitter_status"
        android:id="@+id/emitter_status"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/online_status"
        android:layout_toRightOf="@+id/log_output"
        android:layout_toEndOf="@+id/log_output" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_size"
        android:id="@+id/database_size"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/emitter_status"
        android:layout_toRightOf="@+id/log_output"
        android:layout_toEndOf="@+id/log_output" />

</RelativeLayout>