<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Demo">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#0099cc"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/demo_header"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/demo_info"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/emitter_uri_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/emitter_uri_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emitter_uri_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_weight="23"
            android:hint="@string/emitter_uri_hint"
            android:inputType="textUri"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="13sp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_groups"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emitter_uri_block"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioGroup
            android:id="@+id/radio_send_type"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/emitter_type_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

            <RadioButton
                android:id="@+id/radio_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_get" />

            <RadioButton
                android:id="@+id/radio_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_post" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_send_security"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/emitter_protocol_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

            <RadioButton
                android:id="@+id/radio_http"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_http" />

            <RadioButton
                android:id="@+id/radio_https"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_https" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_data_collection"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/data_collection_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

            <RadioButton
                android:id="@+id/radio_data_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_data_on" />

            <RadioButton
                android:id="@+id/radio_data_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_data_off" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/logger_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emitter_logging_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/log_output"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logger_header"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="bottom"
            android:maxLines="200"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/metrics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/log_output"
            android:layout_toEndOf="@+id/log_output"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/emitter_statistics"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/created_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/created_events"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sent_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/sent_events"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/online_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/online_status"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emitter_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/emitter_status"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/database_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/database_size"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/session_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/session_index"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/header"
        android:layout_below="@+id/radio_groups"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/header">

        <Button
            android:id="@+id/btn_lite_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_lite_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>