<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:text="@string/main_demo_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/demo_info"
        android:text="@string/main_demo_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_rx"
        android:layout_height="wrap_content"
        android:text="@string/main_demo_button_rx"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/demo_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_lite"
        android:layout_height="wrap_content"
        android:text="@string/main_demo_button_lite"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_rx"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
